# rust-plus-golang

./: .gitignore  Makefile  README.md  g1.go  hello.h  main-integrated.go  main.go
rustlib/: Cargo.toml
rustlib/src/: lib.rs
submission-msm-gpu/: Cargo.toml
submission-msm-gpu/benches/: msm.rs
submission-msm-gpu/src/: lib.rs
