[package]
name = "hello"
version = "0.1.0"

[lib]
# If you only wanted dynamic library, you'd use only "cdylib".
# If you only wanted static library, you'd use only "staticlib".
# This demo shows both. See https://doc.rust-lang.org/reference/linkage.html
# for more information.
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.2"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-377 = { version = "0.3.0" }
num-traits = "*"